Fix for persona circle overflow bug when animating.

--- a/src/components/Persona/Persona.scss
+++ b/src/components/Persona/Persona.scss
@@ -40,6 +40,7 @@ $ms-color-initials-darkRed: 		#b91d47;
 	width: 48px;
 	height: 48px;
 	border-radius: 50%;
+	z-index: 0;
 }
 
 //= Note: The doughboy placeholder is being deprecated.
